...
                    Commons.editJobAmount(
                        'Jobs',
                        hotJobBloc.getBasicJobNum,
                        hotJobBloc.sinkBasicJobNumber,
                        hotJobBloc.incrementBasicJobNum,
                        hotJobBloc.decrementBasicJobNum,
                        'hotJobInc',
                        'hotJobDec',
                        '0'),
                    SizedBox(
                      height: 20.0,
                    ),
                    //Amount row
                    StreamBuilder(
                        stream: hotJobBloc.getBasicJobFee,
                        builder: (context, snapshot) {
                          return Commons.showAmount(
                              'Amount',
                              snapshot.hasData && snapshot.data != null
                                  ? '${snapshot.data}'
                                  : '0.0', 'hotJobAmount');
                        }),
                    StreamBuilder(
                        stream: hotJobBloc.showDiscountForBasic,
                        builder: (context, snapshot) {
                          return snapshot.hasData && snapshot.data != 'false'
                              ? Commons.showDiscount('${snapshot.data}')
...
                    Commons.editJobAmount(
                        'Jobs',
                        hotJobBloc.getPremiumJobNum,
                        hotJobBloc.sinkPremiumJobNumber,
                        hotJobBloc.incrementPremiumJobNum,
                        hotJobBloc.decrementPremiumJobNum,
                        'hotJobPremInc',
                        'hotJobPremDec',
                        '0'),
                    SizedBox(
                      height: 20.0,
                    ),
                    //Amount row
                    StreamBuilder(
                        stream: hotJobBloc.getPremiumJobFee,
                        builder: (context, snapshot) {
                          return Commons.showAmount(
                              'Amount',
                              snapshot.hasData && snapshot.data != null
                                  ? '${snapshot.data}'
                                  : '0.0', 'hotJobPremiumAmount');
                        }),
                    StreamBuilder(
                        stream: hotJobBloc.showDiscountForPremium,
                        builder: (context, snapshot) {
                          return snapshot.hasData && snapshot.data != 'false'
                              ? Commons.showDiscount('${snapshot.data}')
...
                        stream: hotJobBloc.getSubTotal,
                        builder: (context, snapshot) {
                          return Commons.showAmount(
                              'Sub Total',
                              snapshot.hasData && snapshot.data != null
                                  ? '${snapshot.data}'
                                  : '0.0', 'hotJobSubTotal');
                        }),
                    SizedBox(
                      height: 30.0,
                    ),
                    StreamBuilder(
                        stream: hotJobBloc.getVat,
                        builder: (context, snapshot) {
                          return Commons.showAmount(
                              'VAT (5%)',
                              snapshot.hasData && snapshot.data != null
                                  ? '${snapshot.data}'
                                  : '0.0', 'hotJobVat');
                        }),
                    SizedBox(
                      height: 30.0,
                    ),
                  ],
                ),
...
