...
                  Commons.editJobAmount(
                      'Basic Jobs',
                      selectedAndCVBankBloc.getSelectedJobNum,
                      selectedAndCVBankBloc.sinkSelectedJobNumber,
                      selectedAndCVBankBloc.incrementSelectedJobNum,
                      selectedAndCVBankBloc.decrementSelectedJobNum,
                      'bulkBasicInc',
                      'bulkBasicDec',
                      '0',
                      index: 0),
                  SizedBox(
                    height: 30.0,
                  ),
                  //Amount row
...
                      stream: selectedAndCVBankBloc.getSelectedJobFee,
                      builder: (context, snapshot) {
                        return Commons.showAmount(
                            'Amount',
                            snapshot.hasData && snapshot.data != null
                                ? '${snapshot.data}'
                                : '0.0', 'bulkBasicAmount');
                      }),
                  StreamBuilder(
                      stream: selectedAndCVBankBloc.showDiscountForBasic,
                      builder: (context, snapshot) {
                        return Commons.showDiscount('${snapshot.data}%');
                      }),
...
                      stream: selectedAndCVBankBloc.getSubTotal,
                      builder: (context, snapshot) {
                        return Commons.showAmount(
                            'Sub Total',
                            snapshot.hasData && snapshot.data != null
                                ? '${snapshot.data}'
                                : '0.0', 'bulkBasicSubTotal');
                      }),
                  SizedBox(
                    height: 30.0,
                  ),
                  StreamBuilder(
                      stream: selectedAndCVBankBloc.getVat,
                      builder: (context, snapshot) {
                        return Commons.showAmount(
                            'VAT (5%)',
                            snapshot.hasData && snapshot.data != null
                                ? '${snapshot.data}'
                                : '0.0', 'bulkBasicVat');
                      }),
                  SizedBox(
                    height: 30.0,
                  ),
                ],
              )
...
